# AnvilML

./: .clinerules  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  FORGE_AGENT_RULES.md  LICENSE  README.md  SECURITY.md  anvilml.toml  rust-toolchain.toml  valid_zit_job.json
.forge/reports/: P0-A1_implement.md  P0-A1_plan.md  P0-A2_implement.md  P0-A2_plan.md  P0-A3_implement.md  P0-A3_plan.md  P0-B1_implement.md  P0-B1_plan.md  P0-C1_implement.md  P0-C1_plan.md  P0-D1_implement.md  P0-D1_plan.md  P1-A1_implement.md  P1-A1_plan.md  P1-A2_implement.md  P1-A2_plan.md  P1-A3_implement.md  P1-A3_plan.md  P1-A4_implement.md  P1-A4_plan.md  P1-A5_implement.md  P1-A5_plan.md  P1-B1_implement.md  P1-B1_plan.md  P1-B2_implement.md  P1-B2_plan.md  P1-B3_implement.md  P1-B3_plan.md  P1-B4_implement.md  P1-B4_plan.md  P1-B5_implement.md  P1-B5_plan.md  P1-B6_implement.md  P1-B6_plan.md  P1-C1_implement.md  P1-C1_plan.md  P1-D1_implement.md  P1-D1_plan.md  P1-D2_implement.md  P1-D2_plan.md  (+538 more)
.forge/state/: CURRENT_TASK.md  state.json
.forge/tasks/: tasks_phase000.json  tasks_phase001.json  tasks_phase002.json  tasks_phase003.json  tasks_phase004.json  (+33 more)
.github/: PULL_REQUEST_TEMPLATE.md
backend/: Cargo.toml  openapi.json
backend/migrations/: 001_initial.sql  001_jobs.sql  002_models.sql  003_artifacts.sql  004_device_capabilities.sql
backend/scripts/: install_worker_deps.ps1  install_worker_deps.sh  test_inference.py
backend/seeds/: devices.sql
backend/src/: cli.rs  lib.rs  main.rs  preflight.rs  shutdown.rs
backend/tests/: api_cancel.rs  api_delete.rs  api_ws_lifecycle.rs  cli_help_test.rs  cli_tests.rs  config_reference.rs  db_startup_tests.rs  hw_probe_help_test.rs  known_node_types.json  logging_tests.rs  preflight_check.rs  shutdown_tests.rs
crates/anvilml-artifacts/: Cargo.toml
crates/anvilml-artifacts/src/: lib.rs  store.rs
crates/anvilml-artifacts/tests/: store_tests.rs
crates/anvilml-core/: Cargo.toml
crates/anvilml-core/src/: config.rs  config_load.rs  error.rs  lib.rs  node_registry.rs
crates/anvilml-core/src/types/: artifact.rs  events.rs  hardware.rs  job.rs  mod.rs  model.rs  node.rs  worker.rs
crates/anvilml-core/tests/: artifact_tests.rs  config_load_tests.rs  config_tests.rs  error_tests.rs  events_tests.rs  hardware_tests.rs  job_tests.rs  model_tests.rs  node_registry_tests.rs  node_tests.rs  worker_tests.rs
crates/anvilml-hardware/: Cargo.toml
crates/anvilml-hardware/src/: cpu.rs  cuda.rs  detect.rs  device_db.rs  dxgi.rs  lib.rs  mock.rs  nvml.rs  rocm.rs  sysfs.rs  vulkan.rs
crates/anvilml-hardware/tests/: cpu_tests.rs  detect_tests.rs  device_db_tests.rs  dxgi_sysfs_tests.rs  dxgi_tests.rs  mock_tests.rs  sysfs_tests.rs  vulkan_tests.rs
crates/anvilml-ipc/: Cargo.toml
crates/anvilml-ipc/src/: artifact_store.rs  error.rs  framing.rs  lib.rs  messages.rs  transport.rs
crates/anvilml-ipc/src/ws/: broadcaster.rs  mod.rs
crates/anvilml-ipc/tests/: error_tests.rs  roundtrip_tests.rs  stress_test.rs  transport_tests.rs
crates/anvilml-openapi/: Cargo.toml
crates/anvilml-openapi/src/: main.rs
crates/anvilml-registry/: Cargo.toml
crates/anvilml-registry/src/: db.rs  device_store.rs  lib.rs  scanner.rs  seed_loader.rs  store.rs
crates/anvilml-registry/tests/: anvilml_registry_db.rs  db_tests.rs  device_store.rs  device_store_tests.rs  patch_meta.rs  rescan.rs  rescan_stale.rs  safetensors_header.rs  scanner.rs  scanner_tests.rs  seed_loader.rs  seed_loader_tests.rs  store_get.rs  store_list.rs  store_tests.rs
crates/anvilml-scheduler/: Cargo.toml
crates/anvilml-scheduler/src/: dag.rs  event_loop.rs  job_store.rs  ledger.rs  lib.rs  node_registry.rs  nodes.rs  queue.rs  scheduler.rs  types.rs
crates/anvilml-scheduler/tests/: dag_tests.rs  dispatch_tests.rs  event_loop_tests.rs  image_ready_tests.rs  ledger_tests.rs  model_resolve_tests.rs  node_registry_tests.rs  progress_tests.rs  queue_tests.rs  scheduler_cancel_tests.rs  scheduler_tests.rs
crates/anvilml-server/: Cargo.toml
crates/anvilml-server/src/: frontend.rs  lib.rs  state.rs
crates/anvilml-server/src/artifact/: mod.rs  store.rs
crates/anvilml-server/src/handlers/: artifacts.rs  health.rs  jobs.rs  mod.rs  models.rs  nodes.rs  system.rs  workers.rs
crates/anvilml-server/src/ws/: broadcaster.rs  handler.rs  mod.rs  stats_tick.rs
crates/anvilml-server/tests/: api_artifact_save.rs  api_artifact_serve.rs  api_models.rs  api_ws_events.rs  artifact_store_tests.rs  artifacts_tests.rs  broadcaster_tests.rs  handler_tests.rs  health_tests.rs  jobs_tests.rs  models_tests.rs  nodes_tests.rs  state_tests.rs  stats_tick_tests.rs  system_tests.rs  workers_tests.rs
crates/anvilml-worker/: Cargo.toml
crates/anvilml-worker/src/: bridge.rs  demux.rs  env.rs  job_object.rs  keepalive.rs  lib.rs  managed.rs  pool.rs  respawn.rs  spawn.rs
crates/anvilml-worker/tests/: bridge_tests.rs  demux_tests.rs  env_tests.rs  keepalive_tests.rs  managed_tests.rs  pool_tests.rs  respawn_tests.rs  spawn_tests.rs
docs/: ADDENDUM_ARTIFACT_NOT_FOUND.md  ADDENDUM_ENUMERATION_SOURCE_CPU.md  ANVILML_DESIGN.md  ARCHITECTURE.md  ENVIRONMENT.md  FORGE_AGENT_RULES.md  PHASES.md  PHASES_GRAPH.md  PROOF_phase015.md  PROOF_phase021.md  README.md  RUNNABLE_PROOF.md  SUPPORTED_DEVICES_DB.md  TASKS_PHASE000.md  TASKS_PHASE001.md  TASKS_PHASE002.md  TASKS_PHASE003.md  TASKS_PHASE004.md  TASKS_PHASE005.md  TASKS_PHASE006.md  TASKS_PHASE007.md  TASKS_PHASE008.md  TASKS_PHASE009.md  TASKS_PHASE010.md  TASKS_PHASE011.md  TASKS_PHASE012.md  TASKS_PHASE013.md  TASKS_PHASE014.md  TASKS_PHASE015.md  TASKS_PHASE016.md  TASKS_PHASE017.md  TASKS_PHASE018.md  TASKS_PHASE019.md  TASKS_PHASE020.md  TASKS_PHASE021.md  TASKS_PHASE022.md  TASKS_PHASE023.md  TASKS_PHASE024.md  TASKS_PHASE025.md  TASKS_PHASE026.md  (+13 more)
downloads/: safetensors-0.8.0-cp310-abi3-macosx_10_12_x86_64.whl
scripts/: install_worker_deps.ps1  install_worker_deps.sh
test-frontend/: index.html
worker/: defaults.py  executor.py  ipc.py  ipc_echo.py  pipeline_cache.py  worker_main.py
(+69 files in other folders)
