[workspace]
members = [
    "backend",
    "crates/anvilml-core",
    "crates/anvilml-hardware",
    "crates/anvilml-registry",
    "crates/anvilml-ipc",
    "crates/anvilml-worker",
    "crates/anvilml-scheduler",
    "crates/anvilml-server",
    "crates/anvilml-openapi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
# Runtime dependencies (shared across multiple crates)
ash = { version = "0.38", default-features = false, features = ["loaded"] }
axum = { version = "0.8", features = ["json", "ws"] }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
hex = "0.4.3"
log = "0.4.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11"
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
sysinfo = "0.39.3"
thiserror = "2"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1"
tower = { version = "0.5" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
utoipa = { version = "5.5.0", features = ["chrono", "uuid"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
walkdir = "2.5.0"
http-body-util = "0.1"
bytes = "1"

# Dev dependencies (shared across multiple crates)
serial_test = "3.5.0"
tempfile = "3.27.0"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
