[workspace]
members = [
    "backend",
    "crates/anvilml-core",
    "crates/anvilml-hardware",
    "crates/anvilml-registry",
    "crates/anvilml-ipc",
    "crates/anvilml-worker",
    "crates/anvilml-scheduler",
    "crates/anvilml-server",
    "crates/anvilml-openapi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["json", "http1", "tokio", "ws"] }
tracing = { version = "0.1.44", features = ["std", "attributes"] }
zeromq = { version = "0.6.0", features = ["tokio-runtime", "tcp-transport"] }
rmp-serde = "1.3.1"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "json"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
thiserror = "2.0.18"
tower-http = { version = "0.6.11", features = ["cors", "trace", "timeout"] }
