[package]
name = "anvilml"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[features]
# Forwards through anvilml-scheduler → anvilml-hardware/mock-hardware.
mock-hardware = ["anvilml-scheduler/mock-hardware"]

[dependencies]
anvilml-scheduler = { path = "../crates/anvilml-scheduler" }
anvilml-server = { path = "../crates/anvilml-server" }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
