[package]
name = "anvilml-artifacts"
version = "0.1.0"
edition.workspace = true

[dependencies]
anvilml-core = { path = "../anvilml-core" }
chrono = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true, features = ["chrono"] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serial_test = "3.5"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
