[package]
name = "anvilml-artifacts"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvilml-core = { path = "../anvilml-core" }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "migrate", "chrono"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.26"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.23", features = ["v4"] }
