[package]
name = "anvilml-core"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "2.0.18"
axum = "0.8.9"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["sqlite"] }
toml = "1.1.2"

[dev-dependencies]
tokio = { version = "1.47.0", features = ["full"] }
