[package]
name = "anvilml-core"
version = "0.1.11"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "2.0.18"
axum = "0.8.9"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["sqlite"] }
toml = "1.1.2"

chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.5.0", features = ["uuid", "chrono"] }

[dev-dependencies]
tokio = { version = "1.47.0", features = ["full"] }
serial_test = "3.5.0"
