[package]
name = "anvilml-hardware"
version = "0.1.4"
edition.workspace = true

[dependencies]
anvilml-core = { path = "../anvilml-core" }
ash = { version = "0.38", default-features = false, features = ["loaded"] }
sysinfo = "0.33"
tracing = { workspace = true }
windows = { version = "0.57", features = ["Win32_Graphics_Dxgi"], optional = true }
libloading = { version = "0.8", optional = true }

[dev-dependencies]
serial_test = "3.5"

[features]
# Replace GPU detection with MockDetector driven by ANVILML_MOCK_* env vars.
# Declared here; forwarded by anvilml-worker, anvilml-scheduler, anvilml-server, and backend.
mock-hardware = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = ["Win32_Graphics_Dxgi", "Win32_System_Com"] }

[target.'cfg(unix)'.dependencies]
libloading = { version = "0.8" }
