[package]
name = "anvilml-hardware"
version = "0.1.8"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvilml-core = { path = "../anvilml-core" }
ash = "0.38.0"
tracing = "0.1"
windows = { version = "0.58", default-features = false, features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[features]
mock-hardware = []

[dev-dependencies]
serial_test = "3.5.0"
tokio = { version = "1.47.0", features = ["full"] }
