[package]
name = "anvilml-ipc"
version = "0.1.6"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvilml-core = { path = "../anvilml-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.47.0", features = ["sync"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
zeromq = { version = "0.6.0", default-features = false, features = ["tokio-runtime", "all-transport"] }

[dev-dependencies]
rmp-serde = "1.3.1"
tokio = { version = "1.47.0", features = ["sync", "macros", "rt-multi-thread"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
