[package]
name = "anvilml-ipc"
version = "0.1.9"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvilml-core = { path = "../anvilml-core" }
bytes = "1.12"
rmp-serde = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.47.0", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
zeromq = { version = "0.6.0", default-features = false, features = ["tokio-runtime", "all-transport"] }

[dev-dependencies]
tokio = { version = "1.47.0", features = ["sync", "macros", "rt-multi-thread"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
