[package]
name = "anvilml-openapi"
version.workspace = true
edition.workspace = true

[[bin]]
name = "anvilml-openapi"
path = "src/main.rs"

[dependencies]
anvilml-core = { path = "../anvilml-core" }
anvilml-server = { path = "../anvilml-server" }
axum = { workspace = true }
tracing = { workspace = true }
