[package]
name = "anvilml-registry"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvilml-core = { path = "../anvilml-core" }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "migrate", "chrono"] }
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.26"
