[package]
name = "anvilml-scheduler"
version = "0.1.4"
edition.workspace = true

[dependencies]
anvilml-core = { path = "../anvilml-core" }
anvilml-hardware = { path = "../anvilml-hardware" }
anvilml-registry = { path = "../anvilml-registry" }
anvilml-worker = { path = "../anvilml-worker" }
indexmap = "2.7"
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
# Forward mock-hardware to anvilml-hardware so MockDetector is compiled in.
mock-hardware = ["anvilml-hardware/mock-hardware"]
