[package]
name = "anvilml-scheduler"
version = "0.1.12"
edition.workspace = true

[dependencies]
anvilml-artifacts = { path = "../anvilml-artifacts" }
anvilml-core = { path = "../anvilml-core" }
anvilml-hardware = { path = "../anvilml-hardware" }
anvilml-ipc = { path = "../anvilml-ipc" }
anvilml-registry = { path = "../anvilml-registry" }
anvilml-worker = { path = "../anvilml-worker" }
base64 = "0.22"
chrono = { workspace = true }
indexmap = "2.7"
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
# Forward mock-hardware to anvilml-hardware so MockDetector is compiled in.
mock-hardware = ["anvilml-hardware/mock-hardware"]

[dev-dependencies]
chrono = { workspace = true }
serial_test = "3.1"
sqlx = { workspace = true }
