[package]
name = "anvilml-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvilml-worker = { path = "../anvilml-worker" }
anvilml-registry = { path = "../anvilml-registry" }
anvilml-artifacts = { path = "../anvilml-artifacts" }
anvilml-core = { path = "../anvilml-core" }
anvilml-hardware = { path = "../anvilml-hardware" }

[features]
mock-hardware = ["anvilml-hardware/mock-hardware"]
