[package]
name = "anvilml-server"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvilml-worker = { path = "../anvilml-worker" }
anvilml-registry = { path = "../anvilml-registry" }
anvilml-artifacts = { path = "../anvilml-artifacts" }
anvilml-core = { path = "../anvilml-core" }
anvilml-ipc = { path = "../anvilml-ipc" }
anvilml-hardware = { path = "../anvilml-hardware" }
axum = "0.8.9"

[dev-dependencies]
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5"

[features]
mock-hardware = ["anvilml-hardware/mock-hardware"]
