[package]
name = "anvilml-worker"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvilml-ipc = { path = "../anvilml-ipc" }
anvilml-hardware = { path = "../anvilml-hardware" }
anvilml-core = { path = "../anvilml-core" }
tokio = { version = "1.52.3", features = ["process"] }
tracing = "0.1"

[features]
mock-hardware = ["anvilml-hardware/mock-hardware"]
