[package]
name = "anvilml-worker"
version = "0.1.9"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvilml-ipc = { path = "../anvilml-ipc" }
anvilml-hardware = { path = "../anvilml-hardware" }
anvilml-core = { path = "../anvilml-core" }
tokio = { version = "1.52.3", features = ["process", "rt", "sync", "time"] }
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
serial_test = "3"
rmp-serde = "1"
zeromq = { version = "0.6", default-features = false, features = ["tokio-runtime"] }
bytes = "1"

[features]
mock-hardware = ["anvilml-hardware/mock-hardware"]
